# acronomy

./: .gitignore  .gitlab-ci.yml  deploy.sh  manage.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
acronomy/: asgi.py  secrets.test.py  settings.py  urls.py  wsgi.py
acros/: admin.py  apps.py  forms.py  serializers.py  sitemaps.py  urls.py  utils.py  views.py
acros/management/commands/: acrooftheday.py  datacheck.py  markdown.py  matomo-import.py  refetch_wikipedia.py  scss.py
acros/migrations/: 0001_initial.py  0002_historicalacronym_historicaldoireference_historicalweblink.py  0003_auto_20200527_0938.py  0004_auto_20200527_1922.py  0005_auto_20200527_1954.py  0006_auto_20200527_1956.py  0007_auto_20200528_1717.py  0008_auto_20200528_1827.py  0009_auto_20200529_1728.py  0010_auto_20200529_1859.py  0011_auto_20200529_1900.py  0012_auto_20200529_1943.py  0013_auto_20200531_1616.py  0014_auto_20200531_1616.py  0015_auto_20200531_1638.py  0016_auto_20200531_1704.py  0017_auto_20200531_1705.py  0018_auto_20200531_1709.py  0019_host.py  0020_host_fetched.py  0021_auto_20200531_1726.py  0022_auto_20200531_1728.py  0023_auto_20200531_1835.py  0024_auto_20200531_1838.py  0025_auto_20200601_1821.py  0026_auto_20200608_1519.py  0027_auto_20200608_1521.py  0028_auto_20200608_1705.py  0029_historicaltag.py  0030_auto_20200608_1823.py  0031_auto_20200613_2011.py  0032_auto_20200613_2014.py  0033_auto_20200616_1313.py  0034_acrooftheday.py  0035_acrooftheday_order.py  0036_auto_20200708_2004.py  0037_auto_20200718_1718.py  0038_auto_20200718_1727.py  0039_auto_20200718_1919.py  0040_auto_20200718_1920.py  (+13 more)
acros/models/: AcroOfTheDay.py  Acronym.py  Host.py  PaperReference.py  Tag.py  Weblink.py  WikipediaImage.py  WikipediaLink.py  __init__.py  signals.py
acros/templates/: 404.html  integrations.html
acros/templates/SVGs/: icons.html
acros/templates/acros/: add.html  addform.html  addpaper.html  addwebsite.html  addwiki.html  datacheck.html  detail.html  (+8 more)
acros/templatetags/: version.py  vite.py
acros/utils/: apis.py  assets.py  conversion.py  html.py  matomo.py  tags.py  wikilinks.py
common/: redirect.py
static/: app.js  login.css  main.ts  style.css
static/js/: autocomplete.ts  bootstrap.ts  codemirror.ts  letter.ts  tags.ts
static/libs/: fonts  markdown.js
static/scss/: _basestyle.scss  _variables.scss  main.scss
templates/: base.html  footer.html
templates/registration/: login.html
templates/rest_framework/: api.html
(+14 files in other folders)
