[tool.poetry]
name = "acronomy"
version = "0.1.0"
description = ""
authors = ["Lukas Winkler <git@lw1.at>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
django = { extras = ["argon2"], version = "~4.1.0" }
psycopg2 = "^2.8.5"
django-simple-history = "^3.0.0"
markdown = "^3.2.2"
django-debug-toolbar = "^3.1.1"
#djangorestframework = "^3.11.1"
requests = "^2.23.0"
ads = "^0.12.3"
Pillow = "^9.0.1"
gunicorn = "^20.0.4"
beautifulsoup4 = "^4.9.1"
libsass = "^0.22.0"
markdown-katex = "^202112.1034"
sentry-sdk = {extras = ["django"], version = "^1.0.0"}
django-bootstrap5 = "^22.1"
djangorestframework = "^3.13.1"

[tool.poetry.dev-dependencies]
bpython = "^0.23"

[tool.poetry.group.dev.dependencies]
bpython = "^0.24"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
